changement de ports

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "erwanjb <wawan.jb@gmail.com>",
   "license": "MIT",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "npm run dev",
+    "start": "npm run dev", 
     "server": "nodemon index.js",
     "dev": "npm run vue | npm run server",
     "vue": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
