--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js", 
+    "start": "node index.js",
     "server": "nodemon index.js",
     "dev": "npm run vue | npm run server",
     "vue": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
