--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "dev": "npm run vue | npm run server",
-    "vue": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
