--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "erwanjb <wawan.jb@gmail.com>",
   "license": "MIT",
   "private": true,
-  "main": "node_modules/webpack-dev-server/bin/server2.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node node_modules/webpack-dev-server/bin/server2.js",
+    "start": "node index.js",
     "server": "nodemon index.js",
     "dev": "npm run vue | npm run server",
     "vue": "cross-env NODE_ENV=development webpack-dev-server",
@@ -63,7 +63,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
