--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "server": "node index.js",
     "dev": "npm run vue | npm run server",
-    "vue": "cross-env NODE_ENV=development webpack-dev-server",
+    "vue": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -38,7 +38,8 @@
     "vue": "^2.5.16",
     "vue-awesome": "^2.3.7",
     "vue-router": "^3.0.1",
-    "vue-session": "^1.0.0"
+    "vue-session": "^1.0.0",
+    "vuex": "^3.1.1"
   },
   "browserslist": [
     "> 1%",
