--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "0.0.23",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
