--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 npm-debug.log
 yarn-error.log
 package-lock.json
+dist/build.js
+dist/build.js.map
 
 # Editor directories and files
 .idea
