--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
+    "cron": "^1.7.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
