--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.23",
+    "ant-design-vue": "^1.3.13",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "connect-history-api-fallback": "^1.6.0",
