--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "greenlock-express": "^2.7.12",
     "jquery": "^3.3.1",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
