--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "greenlock-express": "^2.7.12",
+    "greenlock-store-fs": "^3.0.2",
     "jquery": "^3.3.1",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
